<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rebuild_edge.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.rebuild_edge.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_colmap"
        android:name="com.example.rebuild_edge.ui.colmap.ColmapFragment"
        android:label="@string/menu_colmap"
        tools:layout="@layout/fragment_colmap" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.rebuild_edge.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.rebuild_edge.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_tasks_to_detail"
            app:destination="@id/nav_task_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_task_detail"
        android:name="com.example.rebuild_edge.ui.tasks.TaskDetailFragment"
        android:label="@string/menu_task_detail"
        tools:layout="@layout/fragment_task_detail" >
        <action
            android:id="@+id/action_task_detail_to_log"
            app:destination="@id/nav_task_log" />
        <action
            android:id="@+id/action_task_detail_to_sparse_preview"
            app:destination="@id/nav_task_sparse_preview" />
    </fragment>

    <fragment
        android:id="@+id/nav_task_log"
        android:name="com.example.rebuild_edge.ui.tasks.TaskLogFragment"
        android:label="查看日志"
        tools:layout="@layout/fragment_task_log" />

    <fragment
        android:id="@+id/nav_task_sparse_preview"
        android:name="com.example.rebuild_edge.ui.tasks.TaskSparsePreviewFragment"
        android:label="稀疏深度预览"
        tools:layout="@layout/fragment_task_sparse_preview" />
</navigation>
